# sentinel-py

./: .gitignore  README.md  pyproject.toml
data/aois/: toolik_aoi.geojson
examples/: create_panarctic_grid.sh  dn-offset_s2_jul01-jul15_2020.sh  download_pavc_points_jun01-aug31_2019-2024.sh  download_s2_jun01-aug31_2019-2024.sh  translate_vrt_to_tif.sh
src/sentinel_py/: __init__.py
src/sentinel_py/cli/: main.py
src/sentinel_py/common/: __init__.py  aoi.py  cdse_auth.py  cdse_search.py  download.py  enums.py  gdal.py  logging.py  utils.py
src/sentinel_py/s2/: __init__.py  cdse_s2_download.py  cdse_s2_nodes.py  s2_masking.py
src/sentinel_py/s2/workflows/: __init__.py  download_s2.py
tests/: test_aoi  test_download
tests/cli/: test_cli_aoi  test_cli_grid  test_cli_s2-download
