[project]
name = "sentinel-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "msteckle", email = "morganrsteckler@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
sentinel-py = "sentinel_py.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
