[project]
name = "sentinel-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "msteckle", email = "morganrsteckler@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "gdal==3.4.3",
    "geopandas>=1.1.1",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "shapely>=2.1.2",
    "typer>=0.20.0",
]

[project.scripts]
sentinel-py = "sentinel_py.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
